AP-24924: Refactor auth check to obtain only single mountpoint
AP-24924 (Enable/disable "repository fetcher" when switching to ClassicUI/ModernUI )